--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -169,6 +169,7 @@ titleBar:
     desc: 视图
     setting: 设置
     sync: 同步
+    history: 浏览器历史记录
   help:
     desc: 帮助
     about: 关于
@@ -292,3 +293,7 @@ tour:
   step14:
     title: 结束
     description: 所有功能介绍完毕, 现在开始使用吧🥳
+history:
+  import: 导入数据
+  importConfirm: 即将导入{browsers}的历史数据, 是否确认?
+  tip: 导入过的浏览器将会自动同步数据
