history 拉取时底部状态栏

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -236,6 +236,9 @@ statusBar:
         decompress: Decompress
     filter:
       tooltip: Filter Categories
+    history:
+      text: Pulling record
+      tooltip: Browser history
 gridCard:
   move: Move
 sync:
