优化导入过程

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -315,4 +315,5 @@ history:
     error: An error occurred during import
     running: Importing data
     calculating: Calculating...
+    empty: No imported data
   tip: The imported browser will automatically synchronize data
