--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -10,6 +10,8 @@ nav:
   about: About
   moment: Moment
   box: Box
+  collection: Collection
+  record: Record
   list: List
   account: Account
 config:
