--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -239,6 +239,9 @@ statusBar:
       tooltip:
         compress: Compress
         decompress: Decompress
+    search:
+      text: Search
+      tooltip: Search browser history
     filter:
       tooltip: Filter Categories
     history:
