--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -202,11 +202,13 @@ widget:
     SINGLE_CATEGORY_BAR: 单独类别柱状图
     TEXT_SUMMARY: 文本总结
     DAILY_ACTIVIRY: 每日活跃
+    RECENT_ACTIVIRY_PIE: 最近活跃饼状图
   subtitle:
     ACTIVE_STATUS_CALENDAR: 近一年每日记录总结
     SINGLE_CATEGORY_BAR: 近30天每日单项记录
     TEXT_SUMMARY: 单项类别平均时长
     DAILY_ACTIVIRY: 24小时内每小时记录
+    RECENT_ACTIVIRY_PIE: 最近几天各项活动占比
   column: 占用列数
   row: 占用行数
   singleCategoryBar:
@@ -219,6 +221,8 @@ widget:
     day: '{day} 天'
     average: 平均时长
     monthAverage: 30天平均
+  recentActivityPie:
+    title: 近7天总结
 statusBar:
   timer: 计时中...
   drag:
