SingleCategoryBar、DailyActivity添加垂直排列

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -216,6 +216,7 @@ widget:
     plan: Plan
     label: Label
     program: Program
+    vertical: Vertical arrangement
   textSummary:
     clockIn: Clock in
     day: '{day} days'
