导入后重启

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -352,3 +352,4 @@ importExport:
   tip: The imported data will directly overwrite the existing data, remember to only use it during migration ⚠️
   import: Import
   export: Export
+  relaunch: Preparing to relaunch soon...
