--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -358,3 +358,4 @@ importExport:
 changelog:
   title: Changelog
   empty: Changelog not retrieved
+  checkbox: After upgrading, no longer automatically display logs
