--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -22,9 +22,11 @@ config:
   timelineMinMinute: Minimum time
   timelineGroupGapMinute: Grouping Intervals
   themeColor: Theme color
+  watcherWhitelist: Monitor whitelist
   desc:
     timelineMinMinute: When displaying the timeline, filter out segments smaller than the current minute
     timelineGroupGapMinute: When displaying the timeline, separate segments of the same type that are separated by the current minute
+    watcherWhitelist: Programs that are in the following folders and have not been added will be added when running.
   header:
     general: General
     behavior: Behavior
@@ -362,3 +364,7 @@ changelog:
   title: Changelog
   empty: Changelog not retrieved
   checkbox: After upgrading, no longer automatically display logs
+watcherWhitelist:
+  add: Add
+  remove: Remove
+  duplicate: Cannot add repeatedly
