--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -22,9 +22,11 @@ config:
   timelineMinMinute: 最小时间
   timelineGroupGapMinute: 分组间隔
   themeColor: 主题色
+  watcherWhitelist: 自动监听白名单
   desc:
     timelineMinMinute: 时间线显示时，筛选掉小于当前分钟的片段
     timelineGroupGapMinute: 时间线显示时，分离同类型相隔当前分钟的片段
+    watcherWhitelist: 在下列文件夹中且未添加的程序，运行时自动加入监听
   header:
     general: 通用
     behavior: 行为
@@ -362,3 +364,7 @@ changelog:
   title: 改动日志
   empty: 未拉取到改动日志
   checkbox: 升级后不再自动显示日志
+watcherWhitelist:
+  add: 新增
+  remove: 删除
+  duplicate: 不能重复添加
