timeline显示隐藏浏览器历史

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -260,6 +260,11 @@ statusBar:
     history:
       text: Pulling record
       tooltip: Browser history
+    historyVisible:
+      text: Browser history
+      tooltip:
+        show: Show
+        hide: Hide
   moment:
     search:
       text: Search
