添加启动时显示界面选项

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -19,6 +19,7 @@ config:
   locale: Language
   checkUpdate: Check update
   autostart: Auto start
+  launchVisible: Visible at startup
   timelineMinMinute: Minimum time
   timelineGroupGapMinute: Grouping Intervals
   themeColor: Theme color
