刷新添加错误处理

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -375,3 +375,5 @@ watcherWhitelist:
   add: Add
   remove: Remove
   duplicate: Cannot add repeatedly
+refresh:
+  error: Error occurred during refresh
