--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -24,11 +24,13 @@ config:
   timelineGroupGapMinute: Grouping Intervals
   themeColor: Theme color
   watcherWhitelist: Monitor whitelist
+  faviconService: Favicon service
   desc:
     timelineMinMinute: When displaying the timeline, filter out segments smaller than the current minute
     timelineGroupGapMinute: When displaying the timeline, separate segments of the same type that are separated by the current minute
     watcherWhitelist: Programs that are in the following folders and have not been added will be added when running
     watcherWhitelistTip: Avoid adding meaningless programs such as "C:\Windows\explorer.exe" that may affect timing accuracy
+    faviconService: Select service providers in the timeline for website icon requests
   header:
     general: General
     behavior: Behavior
