手动记录添加直接录入数据

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -65,6 +65,9 @@ note:
     label: Label name
     countdown: Countdown
     time: Time
+    start: Start
+    end: End
+    direct: Direct input
 modal:
   submit: Submit
   cancel: Cancel
