--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -93,6 +93,7 @@ updater:
   content: The new version {version} has been released. Are you sure to update it?
   checkUpdate: An error occurred while pulling the latest version
   updating: An error occurred while updating
+  reinstall: After uninstallation, download the latest version from the official website
   latest: You have the latest version
 timer:
   countdown: The countdown has reached the target time
