添加常见问题文档链接

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -192,6 +192,7 @@ titleBar:
     log: Open log dir
     devtools: Open developer tools
     changelog: Changelog
+    problem: General problem
 timeline:
   plan: Plan
   label: Label
