--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -30,10 +30,13 @@ config:
     timelineGroupGapMinute: 时间线显示时，分离同类型相隔当前分钟的片段
     watcherWhitelist: 在下列文件夹中且未添加的程序，运行时自动加入监听
     faviconService: 选择时间线中进行网站图标请求的服务提供者
-  header:
+  tab:
     general: 通用
     behavior: 行为
     appearance: 外观
+  header:
+    timeline: 时间线
+    monitor: 自动监听
 plan:
   create: 创建计划
   update: 修改计划
