--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -25,18 +25,28 @@ config:
   themeColor: Theme color
   watcherWhitelist: Monitor whitelist
   faviconService: Favicon service
+  scheduledExport: Scheduled export
+  scheduledExportPath: Path
+  scheduledExportPeriod: Period
   desc:
     timelineMinMinute: When displaying the timeline, filter out segments smaller than the current minute
     timelineGroupGapMinute: When displaying the timeline, separate segments of the same type that are separated by the current minute
     watcherWhitelist: Programs that are in the following folders and have not been added will be added when running
     faviconService: Select service providers in the timeline for website icon requests
+    scheduledExportPath: Click to select the save path
   tab:
     general: General
     behavior: Behavior
     appearance: Appearance
+    export: Export
   header:
     timeline: Timeline
     monitor: Monitor
+  export:
+    period:
+      day: Day
+      week: Week
+      month: Month
 plan:
   create: Create plan
   update: Update plan
