显示所有日志

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -400,6 +400,9 @@ changelog:
   title: Changelog
   empty: Changelog not retrieved
   checkbox: After upgrading, no longer automatically display logs
+  tab:
+    current: Current
+    all: All
 watcherWhitelist:
   add: Add
   remove: Remove
