--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -36,6 +36,8 @@ config:
     faviconService: 选择时间线中进行网站图标请求的服务提供者
     scheduledExportPath: 点击选择保存路径
     runAsAdmin: 以管理员身份开机启动，提高自动监听获取窗口的权限
+  tooltip:
+    runAsAdmin: 不推荐开启（运行不稳定）
   tab:
     general: 通用
     behavior: 行为
